force-app/main/default/objects/Exercise_Set__c/Exercise_Set__c.object-meta.xml
<CustomObject>
    <label>Exercise Set</label>
    <nameField>
        <displayFormat>ES-{00000000}</displayFormat>
        <label>Exercise Set Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exercise Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>