force-app/main/default/objects/Exercise_Set__c/fields/Exercise_Log_Item__c.field-meta.xml
<CustomField>
    <fullName>Exercise_Log_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Exercise Log Item</label>
    <referenceTo>Exercise_Log_Item__c</referenceTo>
    <relationshipLabel>Exercise Sets</relationshipLabel>
    <relationshipName>Exercise_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>