force-app/main/default/objects/Exercise_Set__c/fields/Set_Number__c.field-meta.xml
<CustomField>
    <fullName>Set_Number__c</fullName>
    <label>Set Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>